--- a/public/flux.css
+++ b/public/flux.css
@@ -10,7 +10,7 @@ body{
   text-align: center;
   color: #FAFDFE;
 
-
+ z-index: 100;
 }
 
 #logo, #longLogo{
@@ -35,10 +35,10 @@ button {
   height: 100%;
   width: 100%;
 
-  background-color: rgba(255, 255, 255, 0.8);;
+  background-color: rgba(255, 255, 255, 0.1);
 
 
-  z-index: 100;
+  z-index: 50;
   visibility: hidden;
 
 }
@@ -50,4 +50,16 @@ button {
 
   visibility:hidden;
   z-index: 102;
+}
+
+#screen{
+  color: #d3d3d3;
+  z-index: 100;
+  height:200px;
+  width:200px;
+}
+
+.embed-responsive-item{
+  z-index: 1;
+
 }
