took away video, set footer to bottom of page

--- a/public/flux.css
+++ b/public/flux.css
@@ -23,6 +23,12 @@ button {
 
 #footer{
   color: #FAFDFE;
+  width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+
 }
 
 #playerLayer {
