--- a/public/flux.css
+++ b/public/flux.css
@@ -31,7 +31,7 @@ button {
 
 }
 
-#playerLayer {
+/*#playerLayer {
   position: fixed;
   top: 0px;
   left:0px;
@@ -47,7 +47,7 @@ button {
   z-index: 50;
   visibility: hidden;
 
-}
+}*/
 
 #loading {
   position:fixed;
