--- a/public/flux.css
+++ b/public/flux.css
@@ -118,5 +118,16 @@ a:visited {
 }
 #page02{
   visibility: hidden;
-  z-index: 100;
+
+}
+#playerLayer{
+  position: absolute;
+  height:100%;
+  width: 100%;
+
+color: white;
+opacity: 0.1;
+z-index: 100;
+visibility: hidden;
+
 }
