--- a/public/flux.css
+++ b/public/flux.css
@@ -36,33 +36,7 @@ button {
   margin-top: 25px;
 }
 
-/*#footer{
-  color: #FAFDFE;
-  width:100%;
-	height:100px;
-	position:absolute;
-	bottom:0;
-	left:0;
 
-}*/
-
-/*#playerLayer {
-  position: fixed;
-  top: 0px;
-  left:0px;
-
-  text-align: center;
-
-  height: 100%;
-  width: 100%;
-
-  background-color: rgba(255, 255, 255, 0.1);
-
-
-  z-index: 50;
-  visibility: hidden;
-
-}*/
 
 #loading {
   position:fixed;
@@ -147,4 +121,20 @@ visibility: hidden;
 
 #server-response {
   margin-top: 25px;
+}
+
+/* 
+Form adjustments
+*/
+
+.form-control:focus {
+  border-color: #FBFF01;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+
+hr {
+    height: 0.3%;
+    background-color: #072b69;
+    width: 100%;
 }
