--- a/public/flux.css
+++ b/public/flux.css
@@ -25,7 +25,7 @@ button {
   margin-bottom: 20px;
 }
 
-#b2, #b3 {
+#b2, #b3, #submitChoice {
   background-color: #f0c829;
   border-color: #f0c829;
   color: #072b69;
@@ -88,9 +88,11 @@ a:visited {
   margin-left: -40px;
 }
 
+/*
 #emergency{
   visibility:hidden;
 }
+*/
 #page02{
   visibility: hidden;
 
