--- a/public/flux.css
+++ b/public/flux.css
@@ -25,7 +25,7 @@ button {
   margin-bottom: 20px;
 }
 
-#b2, #b3, #submitChoice {
+#b2, #b3, #submitChoice, .formButton {
   background-color: #f0c829;
   border-color: #f0c829;
   color: #072b69;
