--- a/public/flux.css
+++ b/public/flux.css
@@ -1,114 +1,131 @@
-body{
-  background: -webkit-linear-gradient(left, #1b4790, #072b69);
-   background: -o-linear-gradient(right, #1b4790, #072b69);
-   background: -moz-linear-gradient(right, #1b4790, #072b69);
-   background: linear-gradient(right, #1b4790, #072b69);
-
+body {
+    background: -webkit-linear-gradient(left, #1b4790, #072b69);
+    background: -o-linear-gradient(right, #1b4790, #072b69);
+    background: -moz-linear-gradient(right, #1b4790, #072b69);
+    background: linear-gradient(right, #1b4790, #072b69);
 }
 
-body, p {
-  color: #FAFDFE;
+body,
+p {
+    color: #FAFDFE;
 }
 
 h4 {
-  text-align: center;
-  color: #FAFDFE;
-  z-index: 100;
+    text-align: center;
+    color: #FAFDFE;
+    z-index: 100;
 }
 
-#logo, #longLogo{
-  padding:0;
+#logo,
+#longLogo {
+    padding: 0;
 }
 
 button {
-  margin-top: 25px;
-  margin-bottom: 20px;
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
 
-#b2, #b3, #submitChoice, .formButton {
-  background-color: #f0c829;
-  border-color: #f0c829;
-  color: #072b69;
-  font-weight: bold;
+#b2,
+#b3,
+#submitChoice,
+.formButton {
+    background-color: #f0c829;
+    border-color: #f0c829;
+    color: #072b69;
+    font-weight: bold;
 }
 
 .footer {
-  margin-top: 25px;
+    margin-top: 25px;
 }
-
-
 
 #loading {
-  position:fixed;
-  top: 20%;
-  left: 35%;
-
-  visibility:hidden;
-  z-index: 102;
+    position: fixed;
+    top: 20%;
+    left: 35%;
+    visibility: hidden;
+    z-index: 102;
 }
 
-#screen{
-  color: #d3d3d3;
-  z-index: 100;
-  height:200px;
-  width:200px;
+#screen {
+    color: #d3d3d3;
+    z-index: 100;
+    height: 200px;
+    width: 200px;
 }
 
-.embed-responsive-item{
-  z-index: 1;
-
-}
-embed{
-	width:100%
+.embed-responsive-item {
+    z-index: 1;
 }
 
-a{
-  color: #f0c829;
-  text-decoration: none;
+embed {
+    width: 100%
 }
 
-a:hover{
-  color: #f0c829;
-  text-decoration: underline
+a {
+    color: #f0c829;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #f0c829;
+    text-decoration: underline
 }
 
 a:visited {
-  color: #F0D87A;
+    color: #F0D87A;
 }
 
-#episode-confirm, #check-out, #survey {
-  display: none;
+#episode-confirm,
+#check-out,
+#survey {
+    display: none;
 }
 
-#check-in, #check-out {
-  margin-top: 25px;
+#check-in,
+#check-out {
+    margin-top: 25px;
 }
 
 #long-logo {
-  margin-left: -40px;
+    margin-left: -40px;
 }
+
 
 /*
 #emergency{
   visibility:hidden;
 }
 */
-#page02{
-  visibility: hidden;
 
-}
-#playerLayer{
-  position: absolute;
-  height:100%;
-  width: 100%;
-
-color: white;
-opacity: 0.1;
-z-index: 100;
-visibility: hidden;
-
+#page02 {
+    visibility: hidden;
 }
 
+#check-in {
+    visibility: hidden;
+}
+
+#playerLayer {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    color: white;
+    opacity: 0.1;
+    z-index: 100;
+    visibility: hidden;
+}
+
+#backup {
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    font: inherit;
+    color: #f0c829;
+    cursor: pointer;
+        visibility: hidden;
+}
 
 
 /*
@@ -118,22 +135,22 @@ visibility: hidden;
   */
 
 #fire-cancel-buttons {
-  display: none;
+    display: none;
 }
 
 #server-response {
-  margin-top: 25px;
+    margin-top: 25px;
 }
+
 
 /* 
 Form adjustments
 */
 
 .form-control:focus {
-  border-color: #FBFF01;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+    border-color: #FBFF01;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
-
 
 hr {
     height: 0.3%;
