changed styling for events listing, started working on delete event in admin form

--- a/public/flux.css
+++ b/public/flux.css
@@ -132,7 +132,11 @@ a:visited {
     box-shadow: 1px 1px 1px #9CB3E6;
     padding: 2%;
     border: 1px solid #F1EDB1;
-   
+    align-content: center;
+}
+.jumbotron>p{
+    font-size: 0.9em;
+    
 }
 
 .events-list{
@@ -146,6 +150,8 @@ a:visited {
 #tagline{
     margin-bottom: 10%;
 }
+
+
 
 
 /*
