--- a/public/flux.css
+++ b/public/flux.css
@@ -100,7 +100,7 @@ a:visited {
 */
 
 #page02 {
-    visibility: hidden;
+    display:none;
 }
 
 #check-in {
@@ -124,13 +124,18 @@ a:visited {
     font: inherit;
     color: #f0c829;
     cursor: pointer;
-        visibility: hidden;
+    display:none;
+}
+.btn-warning{
+    padding-left: 4%;
+    padding-right: 4%;
 }
 
 .jumbotron {
     background-color: rgba(246,240,250,0.1);
     box-shadow: 1px 1px 1px #9CB3E6;
     padding: 2%;
+    margin-left: 0px;
     border: 1px solid #F1EDB1;
     align-content: center;
 }
@@ -141,6 +146,7 @@ a:visited {
 
 .events-list{
     list-style: none;
+    padding-left: 0;
 }
 
 .city{
@@ -149,6 +155,7 @@ a:visited {
 
 #tagline{
     margin-bottom: 10%;
+
 }
 
 
