--- a/public/flux.css
+++ b/public/flux.css
@@ -158,6 +158,40 @@ a:visited {
 
 }
 
+/*
+
+Media queries
+*/
+
+/* Extra small devices (phones, up to 480px) */
+@media screen and (max-width: 767px) {
+    #tagline{
+        font-size: 0.75em;
+    }
+    .footer{
+        font-size: 0.7em;
+        
+    }
+    
+   
+}
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991px) {
+      #tagline{
+        font-size: 0.9em;
+    }
+    
+   
+}
+/* tablets/desktops and up ----------- */
+@media (min-width: 992px) and (max-width: 1199px) {
+     
+    
+}
+/* large desktops and up ----------- */
+@media screen and (min-width: 1200px) {
+      
+
 
 
 
