Added screen colour change on audio button / audio start

--- a/public/flux.css
+++ b/public/flux.css
@@ -6,11 +6,11 @@ body {
 }
 
 body.checked-in {
-    background-color: #D4420D;
+    background-color: #D4420D!important;
 }
 
 body.audio-playing {
-    background-color: #F0C829;
+    background-color: #F0C829!important;
 }
 
 body,
