Added screen colour change on audio button / audio start

--- a/public/flux.css
+++ b/public/flux.css
@@ -1,8 +1,9 @@
 body {
-    background: -webkit-linear-gradient(left, #1b4790, #072b69);
+/*    background: -webkit-linear-gradient(left, #1b4790, #072b69);
     background: -o-linear-gradient(right, #1b4790, #072b69);
     background: -moz-linear-gradient(right, #1b4790, #072b69);
-    background: linear-gradient(right, #1b4790, #072b69);
+    background: linear-gradient(right, #1b4790, #072b69);*/
+    background: #072B69;
 }
 
 body.checked-in {
