Added screen colour change on audio button / audio start

--- a/public/flux.css
+++ b/public/flux.css
@@ -12,10 +12,11 @@ body.checked-in {
 
 body.audio-playing {
     background-color: #F0C829!important;
+}
 
-    a, a:visited, a:hover {
-        color: #fff !important;
-    }
+body.audio-playing a, body.audio-playing a:visited {
+    color: #fff !important;
+    text-decoration: underline;
 }
 
 body,
