--- a/public/flux.css
+++ b/public/flux.css
@@ -113,9 +113,9 @@ a:hover {
     display:none;
 }
 
-#check-in {
+/*#check-in {
     visibility: hidden;
-}
+}*/
 
 #playerLayer {
     position: absolute;
